src/objects/filegen__File_Control_Record__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Batch_Count__c</fullName>
        <label>Batch Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Block_Count__c</fullName>
        <label>Block Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Entry_Addenda_Count__c</fullName>
        <label>Entry/Addenda  Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Entry_Hash__c</fullName>
        <label>Entry Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Reserved__c</fullName>
        <label>Reserved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Total_Credit_Entry_Dollar_Amount_in_Fi__c</fullName>
        <label>Total Credit  Entry Dollar  Amount in Fi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Total_Debit_Entry_Dollar_Amount_in_Fil__c</fullName>
        <label>Total Debit  Entry Dollar  Amount in Fil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>File Control Record</label>
    <nameField>
        <displayFormat>FCR-{0000000000}</displayFormat>
        <label>File Control Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Control Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>